template.yaml
---
# Source: cas-metabase/templates/networkPolicy/intra-release-by-instance.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: cas-metabase-internal-by-instance
  labels: 
    helm.sh/chart: cas-metabase-0.2.16
    app.kubernetes.io/name: cas-metabase
    app.kubernetes.io/instance: cas-metabase
    app.kubernetes.io/version: "0.43.2"
    app.kubernetes.io/managed-by: Helm
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: cas-metabase
  ingress:
    - from:
        - podSelector:
            matchLabels:
              release: cas-metabase
        - podSelector:
            matchLabels:
              app.kubernetes.io/instance: cas-metabase
---
# Source: cas-metabase/templates/networkPolicy/intra-release-by-release.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: cas-metabase-internal-by-release
  labels: 
    helm.sh/chart: cas-metabase-0.2.16
    app.kubernetes.io/name: cas-metabase
    app.kubernetes.io/instance: cas-metabase
    app.kubernetes.io/version: "0.43.2"
    app.kubernetes.io/managed-by: Helm
spec:
  podSelector:
    matchLabels:
      release: cas-metabase
  ingress:
    - from:
        - podSelector:
            matchLabels:
              release: cas-metabase
        - podSelector:
            matchLabels:
              app.kubernetes.io/instance: cas-metabase
---
# Source: cas-metabase/charts/cas-postgres/charts/patroni/templates/svc-patroni.yaml
apiVersion: v1
kind: Service
metadata:
  name: cas-metabase-patroni
  labels:
    app: cas-metabase-patroni
    chart: patroni-0.21.3
    release: cas-metabase
    heritage: Helm
spec:
  type: ClusterIP
  ports:
  - name: postgresql
    port: 5432
    targetPort: postgresql
    protocol: TCP
  selector:
    app: cas-metabase-patroni
    release: cas-metabase
    spilo-role: master
---
# Source: cas-metabase/charts/cas-postgres/charts/patroni/templates/svc-patroni.yaml
apiVersion: v1
kind: Service
metadata:
  name: cas-metabase-patroni-readonly
  labels:
    app: cas-metabase-patroni
    chart: patroni-0.21.3
    release: cas-metabase
    heritage: Helm
spec:
  type: ClusterIP
  ports:
  - name: postgresql
    port: 5432
    targetPort: postgresql
    protocol: TCP
  selector:
    app: cas-metabase-patroni
    release: cas-metabase
    spilo-role: replica
---
# Source: cas-metabase/charts/metabase/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cas-metabase
  namespace: c53ff1-tools
  labels: 
    helm.sh/chart: metabase-0.12.1
    app.kubernetes.io/name: metabase
    app.kubernetes.io/instance: cas-metabase
    app.kubernetes.io/version: "v0.36.3"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3001
      protocol: TCP
      name: metabase
  selector: 
    app.kubernetes.io/name: metabase
    app.kubernetes.io/instance: cas-metabase
---
# Source: cas-metabase/charts/metabase/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cas-metabase
  namespace: c53ff1-tools
  labels: 
    helm.sh/chart: metabase-0.12.1
    app.kubernetes.io/name: metabase
    app.kubernetes.io/instance: cas-metabase
    app.kubernetes.io/version: "v0.36.3"
    app.kubernetes.io/managed-by: Helm
spec:
  selector:
    matchLabels: 
      app.kubernetes.io/name: metabase
      app.kubernetes.io/instance: cas-metabase
  replicas: 2
  template:
    metadata:
      annotations:
        checksum/config: bf905a657b4e3af7d7fdf21a6ba7e620dbea5e04fbde858da5f14c1fd60e695e
        checksum/nginxconfig: 258b372eaca2ffd6b7ab067877189e310c1a5e325146211eeae90b0ca87ab458
      labels: 
        helm.sh/chart: metabase-0.12.1
        app.kubernetes.io/name: metabase
        app.kubernetes.io/instance: cas-metabase
        app.kubernetes.io/version: "v0.36.3"
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/component: app
    spec:
      imagePullSecrets:
        - name: dockerhub-registry
      containers:
        - name: metabase-nginx
          image: "gcr.io/ggl-cas-storage/nginx:latest"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3001
          volumeMounts:
            - name: nginx-configs
              mountPath: /etc/nginx/conf.d
            - mountPath: /home/.acme.sh
              name: acme-home
            - mountPath: /home/.well-known/acme-challenge
              name: acme-challenge
        - name: metabase
          image: "gcr.io/ggl-cas-storage/metabase:latest"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 120
            timeoutSeconds: 30
            failureThreshold: 6
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 30
            timeoutSeconds: 3
            periodSeconds: 5
          resources:
            limits:
              cpu: 1
              memory: 4Gi
            requests:
              cpu: 250m
              memory: 2Gi
      volumes:
        - name: nginx-configs
          configMap:
            name: cas-metabase-nginx-config
        - name: acme-home
          persistentVolumeClaim:
            claimName: cas-metabase-acme-home
        - name: acme-challenge
          persistentVolumeClaim:
            claimName: cas-metabase-acme-challenge
---
# Source: cas-metabase/charts/cas-postgres/charts/patroni/templates/statefulset-patroni.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: cas-metabase-patroni
  labels:
    app: cas-metabase-patroni
    chart: patroni-0.21.3
    release: cas-metabase
    heritage: Helm
spec:
  serviceName: cas-metabase-patroni
  replicas: 3
  selector:
    matchLabels:
      app: cas-metabase-patroni
      release: cas-metabase
  template:
    metadata:
      name: cas-metabase-patroni
      labels:
        app: cas-metabase-patroni
        release: cas-metabase
    spec:
      serviceAccountName: cas-metabase-patroni
      terminationGracePeriodSeconds: 3600
      containers:
      - name: patroni
        image: "gcr.io/ggl-cas-storage/cas-postgres:0.3.0"
        imagePullPolicy: Always
        lifecycle:
          preStop:
            exec:
              command:
                - /usr/bin/env
                - bash
                - -c
                - |
                  # switch leader pod if the current pod is the leader
                  if curl --fail http://localhost:8008/read-write; then
                    patronictl switchover --force
                  fi
        ports:
        - containerPort: 8008
        - containerPort: 5432
          name: postgresql
        volumeMounts:
        - name: storage-volume
          mountPath: "/home/postgres/pgdata"
          subPath: ""
        - mountPath: /etc/patroni
          name: patroni-config
          readOnly: true
        - name: gcp-9212c9-dev-mb-backups-service-account-key
          mountPath: /etc/credentials
          readOnly: true
        resources:
          limits:
            cpu: 500m
            memory: 2Gi
          requests:
            cpu: 15m
            memory: 600Mi
        livenessProbe:
          httpGet:
            path: /health
            port: 8008
          initialDelaySeconds: 120
          timeoutSeconds: 30
          failureThreshold: 10
          # timeout and failureThreshold match the defaults for
          # https://patroni.readthedocs.io/en/latest/watchdog.html
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              topologyKey: "kubernetes.io/hostname"
              labelSelector:
                matchLabels:
                  app:  patroni
                  release: "cas-metabase"
        
      volumes:
      - name: patroni-config
        secret:
          secretName: cas-metabase-patroni
      - name: gcp-9212c9-dev-mb-backups-service-account-key
        secret:
          secretName: gcp-9212c9-dev-mb-backups-service-account-key
  volumeClaimTemplates:
    - metadata:
        name: storage-volume
        annotations:
        labels:
          app: cas-metabase-patroni
          release: cas-metabase
          heritage: Helm
      spec:
        accessModes:
        - ReadWriteOnce
        resources:
          requests:
            storage: "5Gi"
        storageClassName: "netapp-block-standard"
---
# Source: cas-metabase/templates/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: cas-metabase
  labels:
    helm.sh/chart: cas-metabase-0.2.16
    app.kubernetes.io/name: cas-metabase
    app.kubernetes.io/instance: cas-metabase
    app.kubernetes.io/version: "0.43.2"
    app.kubernetes.io/managed-by: Helm
  annotations:
    haproxy.router.openshift.io/balance: roundrobin

spec:
  host: cas-metabase-dev.apps.silver.devops.gov.bc.ca
  port:
    targetPort: metabase
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: passthrough
  to:
    kind: Service
    name:  cas-metabase
    weight: 100
  wildcardPolicy: None
status:
  ingress:
  - conditions:
    - status: 'True'
      type: Admitted
    host: cas-metabase-dev.apps.silver.devops.gov.bc.ca
    routerName: router
    wildcardPolicy: None
